syntax = "proto3";

package greet.v1;

option go_package = "github.com/alexfalkowski/go-service/internal/greet/v1";

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

message SayStreamHelloRequest {
  string name = 1;
}

message SayStreamHelloResponse {
  string message = 1;
}

service GreeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}

  rpc SayStreamHello(stream SayStreamHelloRequest) returns (stream SayStreamHelloResponse) {}
}
